--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.1.3",
+    "file-loader": "^6.2.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
